# whatsapp-manager

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  base_deployment.yaml  base_deployment_prod.yaml  main.py  out  test-key
.github/workflows/: mr-create.yaml  mr-delete.yaml  mr.yaml  prod-create.yaml  prod-delete.yaml
k8s/: deployment.yaml  ingress-mr.yaml  ingress-prod.yaml  ingress.yaml  mr.yaml  prod.yaml  service.yaml
k8s/mr/: deployment.yaml  ingress-mr.yaml  service.yaml
pipelines/: mr-pipeline.yml  mr.yml  prod-pipeline.yml  prod.yml
src/: error_manager.rs  main.rs  redis.rs  request_builder.rs  request_handler.rs  structs.rs
