[package]
name = "whatsapp-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.151"
redis = {version="0.22.1", features = ["streams"]}
log = "0.4.0"
env_logger = "0.10.0"